[ANW-831] Fix z-index

--- a/docroot/sites/all/themes/custom/nas/css/app.css
+++ b/docroot/sites/all/themes/custom/nas/css/app.css
@@ -14555,6 +14555,10 @@ input[type="checkbox"].np-checkbox:checked + label:before {
   color: #909090;
 }
 
+.page-native-plants .hero {
+  z-index: 2;
+}
+
 .sidebar, .article-sidebar {
   margin-bottom: 25px;
 }
