--- a/docroot/sites/all/themes/custom/nas/scss/modules/_native-plants-search-results.scss
+++ b/docroot/sites/all/themes/custom/nas/scss/modules/_native-plants-search-results.scss
@@ -537,3 +537,9 @@ input[type="checkbox"].np-checkbox {
 //    text-decoration: none;
   }
 }
+
+.page-native-plants {
+  .hero {
+    z-index: 2;
+  }
+}
